--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -766,6 +766,7 @@ main {
 
 
 .keyVisual {
+  position: relative;
   padding: 35px;
   background: white;
   @include mq (medium,max) {
@@ -925,9 +926,9 @@ main {
   &_num {
     width: 110px;
     position: absolute;
-    top: 47%;
+    top: 50%;
     left: 50%;
-    transform: translateX(128%) rotate(-4deg);
+    transform: translate(128%,-10%) rotate(-4deg);
     z-index: 3;
     @include mq (medium,max) {
       width: 50px;
@@ -1179,13 +1180,31 @@ main {
   }
 
   h2 {
+    position: relative;
     font-size: 4.3rem;
     letter-spacing: .05em;
     margin-bottom: 85px;
+    z-index: 2;
     @include mq (medium,max) {
       font-size: 2.8rem;
       text-align: center;
       margin-bottom: 54px;
+    }
+
+    &::after {
+      content: url('/assets/kaigi01/pattern_dots01.svg');
+      position: absolute;
+      top: -40px;
+      left: -30px;
+      display: block;
+      width: 146px;
+      height: 123px;
+      z-index: -1;
+
+      @include mq (medium,max) {
+        left: 0;
+        top: -50px;
+      }
     }
 
     span {
@@ -1213,11 +1232,23 @@ main {
   }
 
   .ttl_main {
+    position: relative;
     margin-bottom: 110px;
     text-align: right;
     @include mq (medium,max) {
       margin-bottom: 100px;
       text-align: center;
+    }
+
+    &::after {
+      content: url('/assets/kaigi01/pattern_dots02.svg');
+      position: absolute;
+      top: -20px;
+      right: 420px;
+      display: block;
+      width: 67px;
+      height: 35px;
+      z-index: -1;
     }
   }
 
@@ -1291,6 +1322,32 @@ main {
     }
   }
 
+  .__item_01 {
+    &::before {
+      content: url('/assets/kaigi01/pattern_dots03.svg');
+      position: absolute;
+      top: -60px;
+      right: -40px;
+      display: block;
+      width: 35px;
+      height: 75px;
+      z-index: -1;
+    }
+  }
+
+  .__item_02 {
+    &::before {
+      content: url('/assets/kaigi01/pattern_dots04.svg');
+      position: absolute;
+      top: 80px;
+      left: -50px;
+      display: block;
+      width: 59px;
+      height: 115px;
+      z-index: 3;
+    }
+  }
+
   &_thm {
     position: relative;
     width: 300px;
@@ -1338,6 +1395,20 @@ main {
     margin-left: -10000px; 
     bottom: 800px;
     transform: rotate(-15deg);
+  }
+
+  .ttl_main {
+    position: relative;
+    &::before {
+      content: url('/assets/kaigi01/pattern_dots05.svg');
+      position: absolute;
+      top: -10px;
+      left: 200px;
+      display: block;
+      width: 83px;
+      height: 35px;
+      z-index: -1;
+    }
   }
 
   &_tab {
@@ -1687,10 +1758,22 @@ main {
   }
 
   .ttl_main {
+    position: relative;
     margin-bottom: 94px;
     text-align: center;
     @include mq (medium,max) {
       margin-bottom: 60px;
+    }
+    &::before {
+      content: url('/assets/kaigi01/pattern_dots06.svg');
+      position: absolute;
+      top: -40px;
+      left: 50%;
+      transform: translateX(100%);
+      display: block;
+      width: 99px;
+      height: 35px;
+      z-index: -1;
     }
   }
 
@@ -1830,19 +1913,38 @@ main {
     border-radius: 4px;
     overflow: hidden;
     border: 1px solid $grey;
-    filter: sepia(100%) hue-rotate(290deg) saturate(500%);
+    background-color: white;
     @include mq (medium,max) {
       margin-bottom: 18px;
     }
 
+    &::before {
+      background-color: #ff5268;
+      display: block;
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      mix-blend-mode: lighten;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      top: 0;
+      z-index: 100;
+    }
+
     img {
       width: 100%;
+      height: 100%;
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
       object-fit: cover;
+      filter: grayscale(100%) contrast(1);
+      mix-blend-mode: multiply;
+      opacity: 1;
     }
   }
 
@@ -2171,3 +2273,79 @@ main {
     }
   }
 }
+
+// @function multiple-box-shadow ($n) {
+//   $value: '#{random(2000)}px #{random(2000)}px #ff556a';
+//   @for $i from 2 through $n {
+//     $value: '#{$value} , #{random(2000)}px #{random(2000)}px #ff556a';
+//   }
+
+//   @return unquote($value);
+// }
+
+// $shadows-small:  multiple-box-shadow(740);
+// $shadows-medium: multiple-box-shadow(240);
+// $shadows-big:    multiple-box-shadow(540);
+
+// #stars {
+//   width: 1px;
+//   height: 1px;
+//   background: transparent;
+//   box-shadow: $shadows-small;
+//   animation: animStar 50s linear infinite;
+    
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 2000px;
+//     width: 1px;
+//     height: 1px;
+//     background: transparent;
+//     box-shadow: $shadows-small;
+//   }
+// }
+
+// #stars2 {
+//   width: 2px;
+//   height: 2px;
+//   background: transparent;
+//   box-shadow: $shadows-medium;
+//   animation: animStar 100s linear infinite;
+    
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 2000px;
+//     width: 2px;
+//     height: 2px;
+//     background: transparent;
+//     box-shadow: $shadows-medium;
+//   }
+// }
+
+// #stars3 {
+//   width: 3px;
+//   height: 3px;
+//   background: transparent;
+//   box-shadow: $shadows-big;
+//   animation: animStar 20s linear infinite;
+
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 2000px;
+//     width: 3px;
+//     height: 3px;
+//     background: transparent;
+//     box-shadow: $shadows-big;
+//   }
+// }
+
+// @keyframes animStar {
+//   from {
+//     transform: translateY(-2000px);
+//   }
+//   to {
+//     transform: translateY(0);
+//   }
+// }
