--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -2243,6 +2243,25 @@ main {
     &_jp {
       font-size: 1.65rem;
       letter-spacing: .05em;
+      a {
+        color: white;
+        position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: -1px;
+          width: 0;
+          height: 6px;
+          background-color: rgba(255,255,255,.34);
+          transition: all .2s ease;
+        }
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
+      }
     }
 
     &_en {
@@ -2254,6 +2273,26 @@ main {
         margin-bottom: 20px;
         line-height: 1.4;
         text-align: center;
+      }
+
+      a {
+        color: white;
+        position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: -1px;
+          width: 0;
+          height: 6px;
+          background-color: rgba(255,255,255,.34);
+          transition: all .2s ease;
+        }
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
       }
     }
   }
@@ -2333,6 +2372,7 @@ main {
     }
   }
 }
+
 
 .shape {
   position: absolute;
