登壇者募集中スタイル追加

--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1779,9 +1779,19 @@ main {
       }
     }
   }
+
+  .schedules_main {
+    .hiring {
+      h4 { 
+        color: $red;
+        font-size: 1.4rem;
+        letter-spacing: .08em;
+      }
+    }
+  }
 }
 
-// schedule tab
+// schedule tab 
 @include mq (medium,max) {
   .schedules {
     &_a, &_b {
