--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1789,7 +1789,7 @@ main {
   }
 
   .schedules_main {
-    .hiring {
+    .__hiring {
       h4 { 
         color: $red;
         font-size: 1.4rem;
@@ -1899,6 +1899,43 @@ main {
         }
       }
     }
+
+    .__hiring {
+      position: relative;
+      border: 1px solid $red;
+      overflow: hidden;
+
+      &::before {
+        content: 'スポンサー募集中';
+        @include center (both);
+        color: $red;
+        text-align: center;
+        background: white;
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: .05em;
+        white-space: nowrap;
+        z-index: 2;
+      }
+
+      &::after {
+        content: '';
+        @include center (both);
+        width: 100%;
+        height: 100%;
+        display: block;
+        background: {
+          color: #e5e5e5;
+          image: url('/assets/kaigi01/v_logo.png');
+          size: cover;
+          position: center;
+          repeat: no-repeat;
+        }
+        z-index: 1;
+        opacity: .1;
+      }
+    }
   }
 
   &_thm {
@@ -1975,7 +2012,7 @@ main {
   }
 
   &_item {
-    width: 18%;
+    width: 14%;
     @include mq (medium,max) {
       width: 24%;
       margin: 0 10px 20px;
