sessionラベル統合

--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -764,7 +764,7 @@ main {
     background: #e79e02;
   }
 
-  &_talk {
+  &_session {
     @extend .tag_extend--schedules;
     background: #11b99b;
   }
