--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -655,6 +655,7 @@ main {
 
   &_comming {
     position: relative;
+    pointer-events: none;
     a {
       background: #f0f0f0;
       color: #b5b5b5;
@@ -1143,6 +1144,7 @@ main {
     bottom: 0;
     right: 0;
     width: 410px;
+    padding: 0 8px 0 0;
     font-size: 1.35rem;
     line-height: 40px;
     letter-spacing: .05em;
@@ -1489,7 +1491,7 @@ main {
       font-size: 1.8rem;
       border: 1px solid;
       border-radius: 4px;
-      padding: 10px 14px;
+      padding: 14px 20px;
       z-index: 2;
     }
   }
@@ -1497,7 +1499,7 @@ main {
     color: #99a8eb;
     left: 17%;
     @include mq (medium,max) {
-      left: 6%;
+      left: 4.5%;
       color: white;
       background: #7294ff;
       border-color: #3e4890;
@@ -1509,7 +1511,7 @@ main {
     color: #f26767;
     right: 17%;
     @include mq (medium,max) {
-      right: 8%;
+      right: 5.5%;
       color: white;
       background: #ff4158;
       border-color: #3a0000;
@@ -1922,13 +1924,13 @@ main {
       &::after {
         content: '';
         @include center (both);
-        width: 100%;
-        height: 100%;
+        width: calc( 100% - 20px );
+        height: calc( 100% - 20px );
         display: block;
         background: {
           color: #e5e5e5;
           image: url('/assets/kaigi01/v_logo.png');
-          size: cover;
+          size: contain;
           position: center;
           repeat: no-repeat;
         }
@@ -2252,6 +2254,7 @@ main {
     }
 
     &_ttl {
+      a { color: $black;}
       position: relative;
       font-size: 2.8rem;
       font-weight: 700;
