募集開始タグ修正

--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -783,7 +783,7 @@ main {
   &_comming {
     position: relative;
     &::before {
-      content: 'まもなく応募開始';
+      content: 'まもなく募集開始';
       font-size: 1.6rem;
       color: $red;
       font-weight: 700;
