--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -2055,20 +2055,20 @@ main {
       margin-bottom: 18px;
     }
 
-    &::before {
-      background-color: #ff5066;
-      display: block;
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 100%;
-      mix-blend-mode: lighten;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      top: 0;
-      z-index: 100;
-    }
+    // &::before {
+    //   background-color: #ff5066;
+    //   display: block;
+    //   position: absolute;
+    //   content: '';
+    //   width: 100%;
+    //   height: 100%;
+    //   mix-blend-mode: lighten;
+    //   left: 0;
+    //   bottom: 0;
+    //   right: 0;
+    //   top: 0;
+    //   z-index: 100;
+    // }
 
     img {
       width: 100%;
@@ -2079,8 +2079,8 @@ main {
       right: 0;
       bottom: 0;
       object-fit: cover;
-      filter: grayscale(100%) contrast(1);
-      mix-blend-mode: multiply;
+      // filter: grayscale(100%) contrast(1);
+      // mix-blend-mode: multiply;
       opacity: 1;
     }
   }
