--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1884,15 +1884,20 @@ main {
       margin-bottom: 80px;
       @include mq (medium,max) {
         flex-direction: column;
+        margin-bottom: 32px;
       }
 
       .spns_item:nth-child(2) {
         .spns_thm {
           img {
             margin-left: 16%;
+            @include mq (medium,max) {
+              margin-left: auto;
+            }
           }
         }
       }
+
       .spns_item {
         width: 40.5%;
         margin: 0 24px;
@@ -1910,7 +1915,7 @@ main {
       flex-wrap: wrap;
       margin: 0 -20px 40px;
       @include mq (medium,max) {
-        margin: 0 auto 24px;
+        margin: 0 auto 16px;
       }
 
       .spns_item {
@@ -1918,7 +1923,7 @@ main {
         margin: 0 22px 40px;
         @include mq (medium,max) {
           width: 41%;
-          margin: 0 10px 28px;
+          margin: 0 10px 16px;
         }
       }
 
@@ -1947,6 +1952,10 @@ main {
         letter-spacing: .05em;
         white-space: nowrap;
         z-index: 2;
+
+        @include mq (medium,max) {
+          font-size: 1.4rem;
+        }
       }
 
       &::after {
